--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -9,6 +9,10 @@
     "@typescript-eslint/no-explicit-any": "off",
     "@typescript-eslint/no-unused-vars": "off",
     "react/no-array-index-key": "off",
-    "react/self-closing-comp": "off"
+    "react/self-closing-comp": "off",
+    "@next/next/no-html-link-for-pages": "off",
+    "@typescript-eslint/ban-ts-comment": "off",
+    "react-hooks/rules-of-hooks": "off",
+    "@next/next/no-img-element": "off"
   }
 }
