--- a/package.json
+++ b/package.json
@@ -6,9 +6,11 @@
         "dev": "next dev",
         "build": "next build",
         "start": "next start",
-        "lint": "next lint"
+        "lint": "next lint",
+        "test": "echo \"No tests specified\" && exit 0"
     },
     "dependencies": {
+        "@emotion/is-prop-valid": "latest",
         "@hookform/resolvers": "^3.9.1",
         "@radix-ui/react-accordion": "1.2.2",
         "@radix-ui/react-alert-dialog": "1.1.4",
@@ -43,34 +45,36 @@
         "cmdk": "1.0.4",
         "date-fns": "^3.0.0",
         "embla-carousel-react": "8.5.1",
+        "framer-motion": "latest",
+        "immer": "latest",
         "input-otp": "1.4.1",
         "lucide-react": "^0.454.0",
         "next": "15.2.4",
         "next-themes": "^0.4.4",
         "react": "^18.2.0",
+        "react-countup": "latest",
         "react-day-picker": "8.10.1",
         "react-dom": "^18.2.0",
+        "react-fast-marquee": "latest",
         "react-hook-form": "^7.54.1",
         "react-resizable-panels": "^2.1.7",
         "recharts": "2.15.0",
+        "schema-dts": "latest",
         "sonner": "^1.7.1",
         "tailwind-merge": "^2.5.5",
         "tailwindcss-animate": "^1.0.7",
+        "use-sync-external-store": "latest",
         "vaul": "^0.9.6",
         "zod": "^3.24.1",
-        "@emotion/is-prop-valid": "latest",
-        "immer": "latest",
-        "use-sync-external-store": "latest",
-        "framer-motion": "latest",
-        "react-fast-marquee": "latest",
-        "zustand": "latest",
-        "react-countup": "latest",
-        "schema-dts": "latest"
+        "zustand": "latest"
     },
     "devDependencies": {
         "@types/node": "^22",
         "@types/react": "^18.0.0",
         "@types/react-dom": "^18.0.0",
+        "eslint": "^9.25.1",
+        "eslint-config-next": "^15.3.1",
+        "mini-css-extract-plugin": "^2.9.2",
         "postcss": "^8",
         "tailwindcss": "^3.4.17",
         "typescript": "^5"
