--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -13,6 +13,9 @@
     "@next/next/no-html-link-for-pages": "off",
     "@typescript-eslint/ban-ts-comment": "off",
     "react-hooks/rules-of-hooks": "off",
-    "@next/next/no-img-element": "off"
+    "@next/next/no-img-element": "off",
+    "react/no-danger": "off",
+    "@next/next/no-dangerous-html": "off",
+    "security/no-dangerously-set-inner-html": "off"
   }
 }
