--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -16,6 +16,14 @@
     "@next/next/no-img-element": "off",
     "react/no-danger": "off",
     "@next/next/no-dangerous-html": "off",
+    "lint/security/no-dangerously-set-inner-html": "off"
+  },
+  "overrides": [
+    {
+      "files": ["components/tracking/tracking-scripts.tsx"],
+      "rules": {
     "security/no-dangerously-set-inner-html": "off"
   }
+    }
+  ]
 }
