--- a/package.json
+++ b/package.json
@@ -7,7 +7,9 @@
         "build": "next build",
         "start": "next start",
         "lint": "next lint",
-        "test": "echo \"No tests specified\" && exit 0"
+        "test": "echo \"No tests specified\" && exit 0",
+        "format": "prettier --write .",
+        "setup": "husky install"
     },
     "dependencies": {
         "@emotion/is-prop-valid": "latest",
@@ -51,6 +53,7 @@
         "lucide-react": "^0.454.0",
         "next": "15.2.4",
         "next-themes": "^0.4.4",
+        "nodemailer": "^6.10.1",
         "react": "^18.2.0",
         "react-countup": "latest",
         "react-day-picker": "8.10.1",
@@ -74,9 +77,19 @@
         "@types/react-dom": "^18.0.0",
         "eslint": "^9.25.1",
         "eslint-config-next": "^15.3.1",
+        "husky": "^9.1.7",
+        "lint-staged": "^15.5.1",
         "mini-css-extract-plugin": "^2.9.2",
         "postcss": "^8",
+        "prettier": "^3.5.3",
         "tailwindcss": "^3.4.17",
         "typescript": "^5"
+    },
+    "lint-staged": {
+        "*.{js,jsx,ts,tsx,json,css,scss,md}": [
+            "npm run lint -- --fix",
+            "npm run format",
+            "npm test"
+        ]
     }
 }
