--- a/.storybook/tsconfig.json
+++ b/.storybook/tsconfig.json
@@ -1,7 +1,8 @@
 {
   "extends": "../tsconfig.json",
   "compilerOptions": {
-    "jsx": "react-jsx"
+    "jsx": "react-jsx",
+    "types": ["storybook__react", "node"]
   },
   "include": ["../components/**/*", "./*.ts"]
 } 
