--- a/package.json
+++ b/package.json
@@ -5,6 +5,8 @@
     "scripts": {
         "dev": "next dev",
         "build": "next build",
+        "postbuild": "next-sitemap",
+        "sitemap": "next-sitemap",
         "start": "next start",
         "lint": "next lint",
         "test": "echo \"No tests specified\" && exit 0",
@@ -12,6 +14,7 @@
         "setup": "husky install"
     },
     "dependencies": {
+        "@builder.io/partytown": "^0.10.3",
         "@emotion/is-prop-valid": "latest",
         "@hookform/resolvers": "^3.9.1",
         "@radix-ui/react-accordion": "1.2.2",
@@ -80,6 +83,7 @@
         "husky": "^9.1.7",
         "lint-staged": "^15.5.1",
         "mini-css-extract-plugin": "^2.9.2",
+        "next-sitemap": "^4.2.3",
         "postcss": "^8",
         "prettier": "^3.5.3",
         "tailwindcss": "^3.4.17",
