--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
         "sitemap": "next-sitemap",
         "start": "next start",
         "lint": "next lint",
-        "test": "echo \"No tests specified\" && exit 0",
+        "test": "playwright test",
         "format": "prettier --write .",
         "setup": "husky install"
     },
@@ -75,6 +75,7 @@
         "zustand": "latest"
     },
     "devDependencies": {
+        "@playwright/test": "^1.52.0",
         "@types/node": "^22",
         "@types/react": "^18.0.0",
         "@types/react-dom": "^18.0.0",
