--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
         "@builder.io/partytown": "^0.10.3",
         "@emotion/is-prop-valid": "latest",
         "@hookform/resolvers": "^3.9.1",
+        "@mailchimp/mailchimp_transactional": "^1.0.59",
         "@radix-ui/react-accordion": "1.2.2",
         "@radix-ui/react-alert-dialog": "1.1.4",
         "@radix-ui/react-aspect-ratio": "1.1.1",
@@ -44,6 +45,8 @@
         "@radix-ui/react-toggle": "1.1.1",
         "@radix-ui/react-toggle-group": "1.1.1",
         "@radix-ui/react-tooltip": "1.1.6",
+        "@sendgrid/mail": "^8.1.5",
+        "@types/react-google-recaptcha": "^2.1.9",
         "autoprefixer": "^10.4.20",
         "class-variance-authority": "^0.7.1",
         "clsx": "^2.1.1",
@@ -57,11 +60,13 @@
         "next": "15.2.4",
         "next-themes": "^0.4.4",
         "nodemailer": "^6.10.1",
+        "postmark": "^4.0.5",
         "react": "^18.2.0",
         "react-countup": "latest",
         "react-day-picker": "8.10.1",
         "react-dom": "^18.2.0",
         "react-fast-marquee": "latest",
+        "react-google-recaptcha": "^3.1.0",
         "react-hook-form": "^7.54.1",
         "react-resizable-panels": "^2.1.7",
         "recharts": "2.15.0",
