--- a/.biome.json
+++ b/.biome.json
@@ -1,3 +1,6 @@
 {
-	"exclude": ["node_modules", ".next"]
+    "exclude": ["node_modules", ".next"],
+    "rules": {
+        "lint/suspicious/noArrayIndexKey": "off"
+    }
 }
