--- a/biome.toml
+++ b/biome.toml
@@ -10,4 +10,12 @@
 noDangerouslySetInnerHtml = "off" 
 
 [ignore]
-patterns = ["node_modules/**", ".next/**", "Z-EXAMPLE-WEBSITE/**", "test-results/**"] 
+patterns = [
+  "node_modules/**",
+  ".next/**",
+  "Z-EXAMPLE-WEBSITE/**",
+  "test-results/**",
+  "**/*.test.tsx",
+  "**/*.test.ts",
+  "**/*.nft.json",
+] 
