--- a/.biomeignore
+++ b/.biomeignore
@@ -7,6 +7,7 @@ node_modules/**
 
 # Ignore example template code directory
 /Z-EXAMPLE-WEBSITE/**
+docs/Z-EXAMPLE-WEBSITE/**
 
 # Ignore test results
 test-results/**
