--- a/package.json
+++ b/package.json
@@ -16,10 +16,10 @@
         "image-optimize": "node scripts/image-optimize.js"
     },
     "dependencies": {
-        "@builder.io/partytown": "^0.10.3",
         "@emotion/is-prop-valid": "latest",
         "@hookform/resolvers": "^3.9.1",
         "@mailchimp/mailchimp_transactional": "^1.0.59",
+        "@qwik.dev/partytown": "^0.11.0",
         "@radix-ui/react-accordion": "1.2.2",
         "@radix-ui/react-alert-dialog": "1.1.4",
         "@radix-ui/react-aspect-ratio": "1.1.1",
