--- a/package.json
+++ b/package.json
@@ -78,6 +78,7 @@
         "sonner": "^1.7.1",
         "tailwind-merge": "^2.5.5",
         "tailwindcss-animate": "^1.0.7",
+        "tailwindcss-pseudo-elements": "^2.0.0",
         "use-sync-external-store": "latest",
         "vaul": "^0.9.6",
         "zod": "^3.24.3",
