--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -12,6 +12,8 @@
 		"react-hooks/rules-of-hooks": "off",
 		"@next/next/no-img-element": "off",
 		"react/no-danger": "off",
-		"@next/next/no-before-interactive-script-outside-document": "off"
+		"@next/next/no-before-interactive-script-outside-document": "off",
+		"no-unused-expressions": "off",
+		"@typescript-eslint/no-unused-expressions": "off"
 	}
 }
