--- a/package.json
+++ b/package.json
@@ -15,7 +15,9 @@
         "format": "prettier --write .",
         "setup": "husky install",
         "image-optimize": "node scripts/image-optimize.js",
-        "deploy": "npm run build && npm run start"
+        "deploy": "npm run build && npm run start",
+        "ensure-react-imports": "node scripts/ensure-react-imports.js",
+        "codemod": "jscodeshift -t scripts/convert-react-runtime.js --extensions ts,tsx app components hooks"
     },
     "dependencies": {
         "@emotion/is-prop-valid": "latest",
@@ -102,7 +104,8 @@
         "sharp": "^0.34.1",
         "tailwindcss": "^3.4.17",
         "ts-node": "^10.9.2",
-        "typescript": "^5"
+        "typescript": "^5",
+        "jscodeshift": "^0.13.0"
     },
     "lint-staged": {
         "*.{js,jsx,ts,tsx,json,css,scss,md}": [
