chore: clean build, lint, biome, and tests all green; ready for main

--- a/.biomeignore
+++ b/.biomeignore
@@ -10,6 +10,7 @@ node_modules/**
 docs/Z-EXAMPLE-WEBSITE/**
 docs/building/inspiration/**
 inspiration/**
+docs/archived/**
 
 # Ignore test results
 test-results/**
