--- a/package.json
+++ b/package.json
@@ -22,11 +22,11 @@
         "deploy": "npm run build && npm run start",
         "ensure-react-imports": "node scripts/ensure-react-imports.js",
         "codemod": "jscodeshift -t scripts/convert-react-runtime.js --extensions ts,tsx app components hooks",
-        "ci:verify": "npm run build && npm run lint -- --max-warnings=0 && npm run type-check && npm test && npx biome check app components lib hooks"
+        "ci:verify": "npm run build && npm run lint -- --max-warnings=0 && npm run type-check && npm test && npx biome check app components lib hooks",
+        "start:ci": "next start -p 3015"
     },
     "dependencies": {
         "@emotion/is-prop-valid": "latest",
-        "@hookform/resolvers": "^3.9.1",
         "@mailchimp/mailchimp_transactional": "^1.0.59",
         "@qwik.dev/partytown": "^0.11.0",
         "@radix-ui/react-accordion": "1.2.2",
@@ -76,16 +76,13 @@
         "react-countup": "latest",
         "react-day-picker": "8.10.1",
         "react-dom": "^18.2.0",
-        "react-fast-marquee": "latest",
         "react-google-recaptcha": "^3.1.0",
-        "react-hook-form": "^7.54.1",
         "react-resizable-panels": "^2.1.7",
         "recharts": "2.15.0",
         "schema-dts": "latest",
         "sonner": "^1.7.1",
         "tailwind-merge": "^2.5.5",
         "tailwindcss-animate": "^1.0.7",
-        "tailwindcss-pseudo-elements": "^2.0.0",
         "use-sync-external-store": "latest",
         "vaul": "^0.9.6",
         "zod": "^3.24.3",
@@ -97,21 +94,20 @@
         "@playwright/test": "^1.52.0",
         "@testing-library/jest-dom": "^6.6.3",
         "@testing-library/react": "^16.3.0",
+        "@types/jest": "^29.5.14",
         "@types/node": "^22",
         "@types/react": "^18.0.0",
         "@types/react-dom": "^18.0.0",
         "@vitejs/plugin-react": "^4.4.1",
         "eslint": "^9.25.1",
         "eslint-config-next": "^15.3.1",
-        "eslint-plugin-unicorn": "^59.0.0",
+        "glob": "^11.0.2",
         "husky": "^9.1.7",
         "jest-axe": "^10.0.0",
         "jscodeshift": "^0.13.0",
         "jsdom": "^26.1.0",
         "lint-staged": "^15.5.1",
-        "mini-css-extract-plugin": "^2.9.2",
         "next-sitemap": "^4.2.3",
-        "postcss": "^8",
         "prettier": "^3.5.3",
         "sharp": "^0.34.1",
         "tailwindcss": "^3.4.17",
