--- a/package.json
+++ b/package.json
@@ -23,7 +23,9 @@
         "ensure-react-imports": "node scripts/ensure-react-imports.js",
         "codemod": "jscodeshift -t scripts/convert-react-runtime.js --extensions ts,tsx app components hooks",
         "ci:verify": "npm run build && npm run lint -- --max-warnings=0 && npm run type-check && npm test && npx biome check app components lib hooks",
-        "start:ci": "next start -p 3015"
+        "start:ci": "next start -p 3015",
+        "lhci": "lhci autorun --config .lighthouserc.json",
+        "lhci:prod": "lhci autorun --config .lighthouserc.json --collect.url=https://gmg-template-website-2025.vercel.app/"
     },
     "dependencies": {
         "@emotion/is-prop-valid": "latest",
@@ -85,11 +87,14 @@
         "tailwindcss-animate": "^1.0.7",
         "use-sync-external-store": "latest",
         "vaul": "^0.9.6",
+        "web-vitals": "^5.0.1",
         "zod": "^3.24.3",
         "zustand": "latest"
     },
     "devDependencies": {
+        "@babel/preset-env": "^7.27.2",
         "@biomejs/biome": "^1.9.4",
+        "@lhci/cli": "^0.10.0",
         "@next/bundle-analyzer": "^15.3.2",
         "@playwright/test": "^1.52.0",
         "@testing-library/jest-dom": "^6.6.3",
@@ -104,7 +109,7 @@
         "glob": "^11.0.2",
         "husky": "^9.1.7",
         "jest-axe": "^10.0.0",
-        "jscodeshift": "^0.13.0",
+        "jscodeshift": "^17.3.0",
         "jsdom": "^26.1.0",
         "lint-staged": "^15.5.1",
         "next-sitemap": "^4.2.3",
