--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -14,6 +14,25 @@
     "react/no-danger": "off",
     "@next/next/no-before-interactive-script-outside-document": "off",
     "no-unused-expressions": "off",
-    "@typescript-eslint/no-unused-expressions": "off"
+    "@typescript-eslint/no-unused-expressions": "off",
+    "no-restricted-syntax": [
+      "error",
+      {
+        "selector": "Literal[value=/#[0-9A-Fa-f]{6}\\b/]",
+        "message": "Hardcoded hex color literals are not allowed; use semantic theme tokens instead."
+      },
+      {
+        "selector": "Literal[value=/bg-[a-z]+-[0-9]{1,3}/]",
+        "message": "Use semantic theme token classes instead of Tailwind bg- literal classes."
+      },
+      {
+        "selector": "Literal[value=/text-[a-z]+-[0-9]{1,3}/]",
+        "message": "Use semantic theme token classes instead of Tailwind text- literal classes."
+      },
+      {
+        "selector": "Literal[value=/border-[a-z]+-[0-9]{1,3}/]",
+        "message": "Use semantic theme token classes instead of Tailwind border- literal classes."
+      }
+    ]
   }
 }
