--- a/package.json
+++ b/package.json
@@ -62,7 +62,6 @@
     "@types/react-google-recaptcha": "^2.1.9",
     "@vercel/analytics": "^1.5.0",
     "@vercel/speed-insights": "^1.2.0",
-    "autoprefixer": "^10.4.20",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "cmdk": "1.0.4",
@@ -96,6 +95,7 @@
   "devDependencies": {
     "@babel/preset-env": "^7.27.2",
     "@biomejs/biome": "^1.9.4",
+    "@fullhuman/postcss-purgecss": "^7.0.2",
     "@lhci/cli": "^0.10.0",
     "@next/bundle-analyzer": "^15.3.2",
     "@playwright/test": "^1.52.0",
@@ -107,6 +107,7 @@
     "@types/react-dom": "^18.0.0",
     "@typescript-eslint/eslint-plugin": "^8.32.1",
     "@vitejs/plugin-react": "^4.4.1",
+    "autoprefixer": "^10.4.21",
     "eslint": "^9.25.1",
     "eslint-config-next": "^15.3.1",
     "eslint-plugin-boundaries": "^5.0.1",
