--- a/tsconfig.json
+++ b/tsconfig.json
@@ -23,12 +23,6 @@
       "@/*": ["./*"]
     }
   },
-  "include": [
-    "**/*.ts",
-    "**/*.tsx",
-    ".next/types/**/*.ts",
-    "next-env.d.ts",
-    ".next-prod/types/**/*.ts"
-  ],
-  "exclude": ["node_modules", ".next", "docs"]
+  "include": ["**/*.ts", "**/*.tsx", ".next/types/**/*.ts", "next-env.d.ts"],
+  "exclude": ["node_modules", ".next", "docs", ".next-prod"]
 }
