--- a/package.json
+++ b/package.json
@@ -25,7 +25,9 @@
     "verify:local": "npm run ci:verify && npm run test:e2e",
     "start:ci": "next start -p 3015",
     "lhci": "lhci autorun --config .lighthouserc.json",
-    "lhci:prod": "lhci autorun --config .lighthouserc.json --collect.url=https://gmg-template-website-2025.vercel.app/"
+    "lhci:prod": "lhci autorun --config .lighthouserc.json --collect.url=https://gmg-template-website-2025.vercel.app/",
+    "analyze:css": "node scripts/analyze-css.js",
+    "analyze:unused-css": "node scripts/analyze-unused-css.js"
   },
   "dependencies": {
     "@emotion/is-prop-valid": "latest",
@@ -71,14 +73,14 @@
     "immer": "latest",
     "input-otp": "1.4.1",
     "lucide-react": "^0.454.0",
-    "next": "15.2.4",
+    "next": "^15.0.0-rc.1",
     "next-themes": "^0.4.4",
     "nodemailer": "^6.10.1",
     "postmark": "^4.0.5",
-    "react": "^18.2.0",
+    "react": "^19.0.0-rc.1",
     "react-countup": "latest",
     "react-day-picker": "8.10.1",
-    "react-dom": "^18.2.0",
+    "react-dom": "^19.0.0-rc.1",
     "react-google-recaptcha": "^3.1.0",
     "react-resizable-panels": "^2.1.7",
     "recharts": "2.15.0",
@@ -95,7 +97,6 @@
   "devDependencies": {
     "@babel/preset-env": "^7.27.2",
     "@biomejs/biome": "^1.9.4",
-    "@fullhuman/postcss-purgecss": "^7.0.2",
     "@lhci/cli": "^0.10.0",
     "@next/bundle-analyzer": "^15.3.2",
     "@playwright/test": "^1.52.0",
@@ -108,6 +109,8 @@
     "@typescript-eslint/eslint-plugin": "^8.32.1",
     "@vitejs/plugin-react": "^4.4.1",
     "autoprefixer": "^10.4.21",
+    "critters": "^0.0.23",
+    "cssnano": "^7.0.7",
     "eslint": "^9.25.1",
     "eslint-config-next": "^15.3.1",
     "eslint-plugin-boundaries": "^5.0.1",
