Optimize Tailwind and PostCSS config for minimal unused CSS, modernize safelist, and ensure all tests/builds pass

--- a/.biomeignore
+++ b/.biomeignore
@@ -39,6 +39,8 @@ app/terms-of-service/**
 app/cookie-policy/**
 
 docs/
+public/**
+public/
 
 # Ignore old Lighthouse config file
 lighthouserc.json
