--- a/package.json
+++ b/package.json
@@ -73,14 +73,14 @@
     "immer": "latest",
     "input-otp": "1.4.1",
     "lucide-react": "^0.454.0",
-    "next": "^15.0.0-rc.1",
+    "next": "^15.3.2",
     "next-themes": "^0.4.4",
     "nodemailer": "^6.10.1",
     "postmark": "^4.0.5",
-    "react": "^19.0.0-rc.1",
+    "react": "^19.1.0",
     "react-countup": "latest",
     "react-day-picker": "8.10.1",
-    "react-dom": "^19.0.0-rc.1",
+    "react-dom": "^19.1.0",
     "react-google-recaptcha": "^3.1.0",
     "react-resizable-panels": "^2.1.7",
     "recharts": "2.15.0",
