--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
     "partytown": "partytown copylib public/~partytown",
     "prepare": "npm run setup",
     "dev": "next dev",
-    "build": "npm run partytown && npm run image-optimize && next build",
+    "build": "npm run partytown && npm run image-optimize && NODE_ENV=production next build",
     "start": "next start",
     "lint": "next lint",
     "test:unit": "vitest run",
@@ -21,7 +21,7 @@
     "deploy": "npm run build && npm run start",
     "ensure-react-imports": "node scripts/ensure-react-imports.js",
     "codemod": "jscodeshift -t scripts/convert-react-runtime.js --extensions ts,tsx app components hooks",
-    "ci:verify": "rm -rf .next-prod && npm run format:check && VERCEL=1 npm run build && npm run lint -- --max-warnings=0 && npm run type-check && npm test && npx biome lint app components lib hooks",
+    "ci:verify": "rm -rf .next-prod && npm run format:check && npm run build && npm run lint -- --max-warnings=0 && npm run type-check && npm test && npx biome lint app components lib hooks",
     "verify:local": "npm run ci:verify && npm run test:e2e",
     "start:ci": "next start -p 3015",
     "lhci": "lhci autorun --config .lighthouserc.json",
