🎨 Implement VirtualCounsel image integration and UI enhancements - Updated all image references to VirtualCounsel branded assets - Header logo uses favicon.ico with enhanced styling - Hero section with optimized cropping and zoom - Enhanced text overlay with stronger gradient - Company name styling with brand color on Counsel - Typing section disabled, brand colors on headline words - Hero gradient backgrounds apply to ALL hero sections globally - CTA section repositioned above about-section - Added VirtualCounsel branding assets and team photos - All tests passing, WCAG AA compliant, ready for deployment

--- a/package.json
+++ b/package.json
@@ -12,7 +12,8 @@
     "test:unit": "vitest run",
     "test:integration": "vitest run tests/integration",
     "test:e2e": "playwright test",
-    "test": "npm run test:unit && npm run test:integration && npm run test:e2e",
+    "test:accessibility": "vitest run tests/unit/contrast-compliance.test.ts",
+    "test": "npm run test:unit && npm run test:integration && npm run test:accessibility && npm run test:e2e",
     "format": "prettier --write .",
     "format:check": "prettier --check .",
     "setup": "husky install",
@@ -111,6 +112,8 @@
     "@typescript-eslint/eslint-plugin": "^8.32.1",
     "@vitejs/plugin-react": "^4.4.1",
     "autoprefixer": "^10.4.21",
+    "axe-core": "^4.10.3",
+    "color-contrast-checker": "^2.1.0",
     "critters": "^0.0.23",
     "cssnano": "^7.0.7",
     "eslint": "^9.25.1",
