Fix services page hero styling and AI Act compliance popularity - Update ServicesOverviewSection to use proper hero gradient styling with bgClass prop - Add transparent header padding support to match other pillar pages - Remove hardcoded blue background and white text from services overview - Add image property to whyChooseSection schema and data - Set AI Act compliance service as non-popular (popular: false) - Add DynamicPageRenderer.tsx to biome linter ignore list

--- a/biome.toml
+++ b/biome.toml
@@ -53,7 +53,8 @@ ignore = [
   "test-results/**",
   "public/~partytown/**",
   "docs/building/inspiration/**",
-  "docs/archived/**"
+  "docs/archived/**",
+  "components/layout/DynamicPageRenderer.tsx"
 ]
 
 # organizeImports should skip these paths too
