feat(cms): complete Fase 1–3 refactor for Decap CMS

--- a/package.json
+++ b/package.json
@@ -23,13 +23,20 @@
     "deploy": "npm run build && npm run start",
     "ensure-react-imports": "node scripts/ensure-react-imports.js",
     "codemod": "jscodeshift -t scripts/convert-react-runtime.js --extensions ts,tsx app components hooks",
-    "ci:verify": "rm -rf .next-prod && npm run format:check && npm run build && npm run lint -- --max-warnings=0 && npm run type-check && npm test && npx biome lint app components lib hooks",
+    "ci:verify": "rm -rf .next-prod && npm run build && npm run lint -- --max-warnings=0 && npm run type-check && npm test && npx biome lint app components lib hooks",
     "verify:local": "npm run ci:verify && npm run test:e2e",
     "start:ci": "next start -p 3015",
     "lhci": "lhci autorun --config .lighthouserc.json",
     "lhci:prod": "lhci autorun --config .lighthouserc.json --collect.url=https://gmg-template-website-2025.vercel.app/",
     "analyze:css": "node scripts/analyze-css.js",
-    "analyze:unused-css": "node scripts/analyze-unused-css.js"
+    "analyze:unused-css": "node scripts/analyze-unused-css.js",
+    "gen:types:homepage": "quicktype -s json lib/content/homepage.json -o types/generated/homepage.d.ts --top-level Homepage --lang ts --just-types",
+    "gen:types:about": "quicktype -s json lib/content/aboutPage.json -o types/generated/aboutPage.d.ts --top-level AboutPage --lang ts --just-types",
+    "gen:types:services": "quicktype -s json lib/content/servicesPage.json -o types/generated/servicesPage.d.ts --top-level ServicesPage --lang ts --just-types",
+    "gen:types:resources": "quicktype -s json lib/content/resources.json -o types/generated/resources.d.ts --top-level Resources --lang ts --just-types",
+    "gen:types:serviceDetailPage": "quicktype -s json lib/content/serviceDetailPage.json -o types/generated/serviceDetailPage.d.ts --top-level ServiceDetailPage --lang ts --just-types",
+    "gen:types:staticContent": "quicktype -s json lib/content/staticContent.json -o types/generated/staticContent.d.ts --top-level StaticContent --lang ts --just-types",
+    "gen:types": "npm-run-all gen:types:*"
   },
   "dependencies": {
     "@emotion/is-prop-valid": "latest",
@@ -133,8 +140,11 @@
     "jscodeshift": "^17.3.0",
     "jsdom": "^26.1.0",
     "lint-staged": "^15.5.1",
+    "netlify-cli": "^22.2.0",
     "next-sitemap": "^4.2.3",
+    "npm-run-all": "^4.1.5",
     "prettier": "^3.5.3",
+    "quicktype": "^23.2.6",
     "sharp": "^0.34.1",
     "tailwindcss": "^3.4.17",
     "ts-node": "^10.9.2",
