chore: add missing dependencies prop-types and decap-cms-app and auto-fix imports

--- a/package.json
+++ b/package.json
@@ -77,6 +77,8 @@
     "clsx": "^2.1.1",
     "cmdk": "1.0.4",
     "date-fns": "^3.0.0",
+    "decap-cms": "^3.7.1",
+    "decap-cms-app": "^3.7.1",
     "embla-carousel-react": "8.5.1",
     "framer-motion": "latest",
     "immer": "latest",
@@ -86,6 +88,7 @@
     "next-themes": "^0.4.4",
     "nodemailer": "^6.10.1",
     "postmark": "^4.0.5",
+    "prop-types": "^15.8.1",
     "react": "^19.1.0",
     "react-countup": "latest",
     "react-day-picker": "8.10.1",
@@ -94,6 +97,7 @@
     "react-resizable-panels": "^2.1.7",
     "recharts": "2.15.0",
     "schema-dts": "latest",
+    "server-only": "^0.0.1",
     "sonner": "^1.7.1",
     "tailwind-merge": "^2.5.5",
     "tailwindcss-animate": "^1.0.7",
@@ -123,6 +127,7 @@
     "color-contrast-checker": "^2.1.0",
     "critters": "^0.0.23",
     "cssnano": "^7.0.7",
+    "cwebp-bin": "^8.0.0",
     "eslint": "^9.25.1",
     "eslint-config-next": "^15.3.1",
     "eslint-plugin-boundaries": "^5.0.1",
